--- a/client/src/styles/style.scss
+++ b/client/src/styles/style.scss
@@ -2,7 +2,7 @@
 
 $WHITE_COLOR: #fff;
 $BLUE_COLOR: #1187cf;
-$GRAY_COLOR: rgba(0, 0, 0, 0.3);
+$GRAY_COLOR: rgba(0, 0, 0, 0.25);
 $RED_COLOR: #d21f3c;
 $MAIN_COLOR: #263238;
 $SUB_COLOR: #fcf6f5;
@@ -214,6 +214,15 @@ a:active {
   }
 }
 
+@keyframes slide {
+  from {
+    height: 0;
+  }
+  to {
+    height: auto;
+  }
+}
+
 //================ LANDING PAGE ========================
 
 .home_landing {
@@ -240,6 +249,7 @@ a:active {
       font-family: "Kaushan Script", cursive;
       color: $WHITE_COLOR;
       text-align: center;
+      user-select: none;
       background-image: linear-gradient(transparent calc(100% - 3px), $WHITE_COLOR 5px);
       background-repeat: no-repeat;
       background-size: 0% 100%;
@@ -271,7 +281,7 @@ a:active {
   perspective: 300px;
   visibility: hidden;
   animation: flip 0.4s 0.8s forwards;
-  box-shadow: 10px 10px 30px rgba(255, 255, 255, 0.3);
+  box-shadow: 10px 10px 30px $GRAY_COLOR;
   &_form {
     background-color: rgba(255, 255, 255, 0.8);
     padding: 1.5rem;
@@ -300,65 +310,79 @@ a:active {
 .main_page_wrapper {
   width: 100%;
   height: 100vh;
-  margin: 0;
-  padding: 0;
-  header {
-    padding: 1rem;
-    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
-    font-family: "Kaushan Script", cursive;
-    font-weight: bold;
-    display: flex;
-    justify-content: space-between;
-    .header_logo {
-      color: black;
-    }
-    .header_menu {
-      li {
-        margin: 0 0.4rem;
-        font-size: 1.1rem;
-        transition: 0.3s;
-        &:hover {
-          transform: scale(1.2);
-        }
-      }
-    }
-  }
   .main_wrapper {
-    width: 100%;
     height: 100%;
     display: flex;
     a {
       display: block;
     }
-    nav {
-      width: 400px;
-      font-size: 1.1rem;
+  }
+}
+
+//====================== Header ========================
+
+header {
+  padding: 1rem;
+  display: flex;
+  justify-content: space-between;
+  .header_logo {
+    color: black;
+    font-family: "Kaushan Script", cursive;
+    font-weight: bold;
+  }
+  .settingIcon {
+    margin: 0 0.4rem;
+    font-size: 1.1rem;
+    transition: 0.3s;
+  }
+  span {
+    margin-right: 0.5rem;
+    font-size: 0.9rem;
+  }
+}
+
+//=================== Navigation =========================
+
+nav {
+  width: 400px;
+  font-size: 1.1rem;
+  background-color: $MAIN_COLOR;
+  .nav_menu {
+    &_link {
+      color: $WHITE_COLOR;
+      padding: 1.5rem;
       background-color: $MAIN_COLOR;
-      .nav_menu {
-        overflow: hidden;
-        &_link {
-          position: relative;
-          color: $WHITE_COLOR;
-          padding: 1.5rem;
-          background-color: $MAIN_COLOR;
-          &:hover {
-            background-color: rgba(255, 255, 255, 0.3);
-          }
-        }
+      &:hover {
+        background-color: $GRAY_COLOR;
       }
-      .nav_sub_menu {
-        li {
-          a {
-            color: $WHITE_COLOR;
-            padding: 1rem 0 1rem 3rem;
-            &:hover {
-              background-color: rgba(255, 255, 255, 0.3);
-            }
-          }
+    }
+  }
+}
+
+.nav_sub_menu {
+  overflow: hidden;
+  div {
+    transition: transform 0.3s;
+    li {
+      a {
+        color: $WHITE_COLOR;
+        padding: 1rem 0 1rem 3rem;
+        &:hover {
+          background-color: $GRAY_COLOR;
         }
       }
     }
   }
+}
+
+.offSubMenu {
+  transform: translateY(-100%);
+  height: 0;
+}
+
+.onSubMenu {
+  transform: translateY(0);
+  height: 100%;
 }
 
 //=================Main Content =======================
@@ -367,7 +391,7 @@ a:active {
   width: 100%;
   height: 60%;
   .content_card_box {
-    border-top: 2px solid rgba(0, 0, 0, 0.3);
+    border-top: 1px solid $GRAY_COLOR;
     padding: 1rem;
     .card {
       width: 50%;
