--- a/client/src/styles/style.scss
+++ b/client/src/styles/style.scss
@@ -5,7 +5,11 @@ $BLUE_COLOR: #1187cf;
 $GRAY_COLOR: rgba(0, 0, 0, 0.25);
 $RED_COLOR: #d21f3c;
 $MAIN_COLOR: #263238;
-$SUB_COLOR: #fcf6f5;
+$ORANGE_COLOR: #ed6f63;
+
+$sm: 576px;
+$md: 768px;
+$lg: 992px;
 
 html,
 body,
@@ -164,6 +168,14 @@ a:active {
   text-decoration: none;
   color: $BLUE_COLOR;
 }
+p {
+  margin: 0;
+}
+
+.ant-divider {
+  border-top: 1px solid $GRAY_COLOR;
+  border-left: 1px solid $GRAY_COLOR;
+}
 
 *::-webkit-scrollbar {
   width: 8px;
@@ -182,6 +194,29 @@ a:active {
 /* Handle on hover */
 *::-webkit-scrollbar-thumb:hover {
   background: rgb(153, 153, 153);
+}
+
+.md_visible {
+  display: none;
+  @media only screen and (max-width: $md) {
+    display: block;
+  }
+}
+
+.lg_visible {
+  display: none;
+  @media only screen and (max-width: $lg) {
+    display: block;
+  }
+}
+
+.overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 200vh;
+  background: rgba(0, 0, 0, 0.5);
 }
 
 @import url("https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap");
@@ -311,7 +346,7 @@ a:active {
   width: 100%;
   height: 100vh;
   .main_wrapper {
-    height: 100%;
+    height: calc(100% - 59.26px);
     display: flex;
     a {
       display: block;
@@ -319,9 +354,48 @@ a:active {
   }
 }
 
+.home_modal {
+  background-color: $WHITE_COLOR;
+  border-radius: 5px;
+  margin: 1rem;
+  padding: 1rem 2rem;
+  box-shadow: 5px 5px 10px $GRAY_COLOR;
+  h4 {
+    line-height: 2;
+    margin-bottom: 0.5rem;
+  }
+  .ant-divider {
+    margin: 0.5rem 0;
+  }
+  span {
+    background-color: $ORANGE_COLOR;
+    border-radius: 5px;
+    padding: 0.15rem 0.3rem;
+    color: $WHITE_COLOR;
+    margin-right: 0.5rem;
+  }
+}
+
+.home_map_modal {
+  position: fixed;
+  bottom: 0;
+  right: 0;
+  width: 620px;
+  height: 260px;
+}
+
+.home_menu_modal {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 500px;
+  height: 340px;
+}
+
 //====================== Header ========================
 
 header {
+  position: relative;
   padding: 1rem;
   display: flex;
   justify-content: space-between;
@@ -333,7 +407,6 @@ header {
   .settingIcon {
     margin: 0 0.4rem;
     font-size: 1.1rem;
-    transition: 0.3s;
   }
   span {
     margin-right: 0.5rem;
@@ -343,9 +416,10 @@ header {
 
 //=================== Navigation =========================
 
-nav {
-  width: 400px;
+.nav {
+  width: 320px;
   font-size: 1.1rem;
+
   background-color: $MAIN_COLOR;
   .nav_menu {
     &_link {
@@ -353,25 +427,13 @@ nav {
       padding: 1.5rem;
       background-color: $MAIN_COLOR;
       &:hover {
-        background-color: $GRAY_COLOR;
+        background-color: rgba(255, 255, 255, 0.2);
       }
     }
   }
-}
-
-.nav_sub_menu {
-  overflow: hidden;
-  div {
-    transition: transform 0.3s;
-    li {
-      a {
-        color: $WHITE_COLOR;
-        padding: 1rem 0 1rem 3rem;
-        &:hover {
-          background-color: $GRAY_COLOR;
-        }
-      }
-    }
+  @media only screen and (max-width: $md) {
+    transform: translateX(-100px);
+    width: 0px;
   }
 }
 
@@ -389,15 +451,79 @@ nav {
 
 .main_content_wrapper {
   width: 100%;
-  height: 60%;
-  .content_card_box {
-    border-top: 1px solid $GRAY_COLOR;
-    padding: 1rem;
-    .card {
-      width: 50%;
-      img {
-        width: 100%;
+  overflow: auto;
+  position: relative;
+}
+
+.article_box {
+  border-top: 1px solid $GRAY_COLOR;
+  padding: 2rem;
+  width: 100%;
+  .article_content {
+    img {
+      width: 100%;
+      padding-right: 1rem;
+    }
+    p {
+      font-size: 0.9rem;
+      line-height: 2.2;
+    }
+  }
+  .article_header {
+    h2 {
+      display: flex;
+      margin-bottom: 0.8rem;
+      strong {
+        margin-right: 1rem;
       }
+      a {
+        font-family: "Kaushan Script", cursive;
+      }
+    }
+    ul {
+      .article_list {
+        display: inline-block;
+        margin-right: 1rem;
+      }
+      .article_tag {
+        user-select: none;
+        margin-right: 0.5rem;
+        display: inline-block;
+        font-size: 0.8rem;
+        background-color: $MAIN_COLOR;
+        padding: 0.1rem 0.5rem;
+        color: $WHITE_COLOR;
+        border-radius: 5px;
+        &:hover {
+          transform: scale(1.05);
+        }
+      }
+    }
+  }
+}
+
+.main_route {
+  width: 100%;
+  height: 20%;
+  padding: 1rem;
+  display: flex;
+  div:first-of-type {
+    margin-right: 0.5rem;
+  }
+  div {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    transition: 0.5s all;
+    box-shadow: 3px 3px 5px $GRAY_COLOR;
+    border-radius: 5px;
+    span {
+      color: $BLUE_COLOR;
+    }
+    &:hover {
+      background-color: $GRAY_COLOR;
     }
   }
 }
