--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -327,6 +327,20 @@ p {
   }
 }
 
+.loadingPage {
+  width: 100%;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .home_landing {
   position: relative;
 }
@@ -563,42 +577,75 @@ header a {
   height: 100%;
 }
 
-.article_box {
+.content_box {
   padding: 2rem;
   width: 100%;
+  height: 50%;
 }
 
-.article_box .article_content img {
+.content_article_img {
+  border-radius: 10px;
+}
+
+.content_article_img img {
   width: 100%;
-  padding-right: 1rem;
+  height: 250px;
+  border-radius: 8px;
 }
 
-.article_box .article_content p {
+.content_article_text {
+  padding-left: 1.5rem;
   font-size: 0.9rem;
   line-height: 2.2;
+  height: 250px;
+  overflow-y: auto;
 }
 
-.article_box .article_header h2 {
+@media only screen and (max-width: 992px) {
+  .content_article_text {
+    padding-top: 1rem;
+    padding-left: 0;
+  }
+}
+
+.content_subtitle {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.content_subtitle span {
+  cursor: pointer;
+  margin-left: 1rem;
+  padding-top: 0.2rem;
+  -webkit-transition: 0.3s;
+  transition: 0.3s;
+}
+
+.content_top h2 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   margin-bottom: 0.8rem;
 }
 
-.article_box .article_header h2 strong {
+.content_top h2 strong {
   margin-right: 1rem;
 }
 
-.article_box .article_header h2 a {
+.content_top h2 a {
   font-family: "Kaushan Script", cursive;
 }
 
-.article_box .article_header ul .article_list {
+.content_top ul .content_list {
   display: inline-block;
   margin-right: 1rem;
 }
 
-.article_box .article_header ul .article_tag {
+.content_top ul .content_tag {
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
@@ -606,19 +653,19 @@ header a {
   margin-right: 0.5rem;
 }
 
-.article_box .article_header ul .article_tag:hover {
+.content_top ul .content_tag:hover {
   -webkit-transform: scale(1.05);
           transform: scale(1.05);
 }
 
-.article_small_box {
+.content_small_box {
   padding: 1rem;
   -webkit-transition: 0.4s all;
   transition: 0.4s all;
   width: 100%;
 }
 
-.article_small_box h2 {
+.content_small_box h2 {
   margin-bottom: 1rem;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -631,20 +678,20 @@ header a {
           align-items: flex-end;
 }
 
-.article_small_box h2 span {
+.content_small_box h2 span {
   font-family: "Kaushan Script", cursive;
 }
 
-.article_small_box h2 a:last-child {
+.content_small_box h2 a:last-child {
   font-size: 0.9rem;
 }
 
-.article_small_box .image_wrapper {
+.content_small_box .image_wrapper {
   overflow: hidden;
   border-radius: 10px;
 }
 
-.article_small_box .image_wrapper img {
+.content_small_box .image_wrapper img {
   width: 100%;
   height: 240px;
   -webkit-transition: 0.4s all;
@@ -652,11 +699,11 @@ header a {
   border-radius: 10px;
 }
 
-.article_small_box:hover {
+.content_small_box:hover {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
-.article_small_box:hover img {
+.content_small_box:hover img {
   -webkit-transform: scale(1.05);
           transform: scale(1.05);
 }
@@ -694,6 +741,14 @@ header a {
           align-items: center;
 }
 
+.route_content_info .ant-select-selection-item {
+  padding: 0 !important;
+}
+
+.route_content_info .ant-select-arrow {
+  display: none;
+}
+
 .route_content_info a {
   margin-left: 0.5rem;
 }
@@ -723,5 +778,71 @@ header a {
 
 .route_btn_next:hover {
   color: #1187cf;
+}
+
+.analyzer_budget {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 1rem;
+  font-weight: normal;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.analyzer_budget h2 {
+  margin-right: 1rem;
+}
+
+.analyzer_budget button {
+  height: 50%;
+  font-size: 0.8rem;
+}
+
+.analyzer_input {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  padding: 1rem;
+}
+
+.analyzer_input .type_selector {
+  width: 30%;
+  margin-right: 1rem;
+}
+
+.analyzer_input .payment {
+  width: 40%;
+}
+
+.analyzer_input .payment_usd {
+  margin-left: 1rem;
+}
+
+.analyzer_input .payment_krw {
+  margin-right: 1rem;
+}
+
+.analyzer_list {
+  padding: 1rem;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+  -webkit-transition: 0.3s all;
+  transition: 0.3s all;
+}
+
+.analyzer_list:hover {
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.analyzer_list .delete_btn {
+  display: inline-block;
+  margin-left: 1rem;
 }
 /*# sourceMappingURL=style.css.map */
