--- a/client/src/styles/style.scss
+++ b/client/src/styles/style.scss
@@ -279,6 +279,13 @@ p {
 
 //================ LANDING PAGE ========================
 
+.loadingPage {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .home_landing {
   position: relative;
   .slick-slider {
@@ -471,22 +478,46 @@ header {
   height: 100%;
 }
 
-//=================Main Content =======================
+//================= Content Box =======================
 
-.article_box {
-  padding: 2rem;
-  width: 100%;
-  .article_content {
-    img {
-      width: 100%;
-      padding-right: 1rem;
+.content {
+  &_box {
+    padding: 2rem;
+    width: 100%;
+    height: 50%;
+  }
+  &_article {
+    &_img {
+      border-radius: 10px;
+      img {
+        width: 100%;
+        height: 250px;
+        border-radius: 8px;
+      }
     }
-    p {
+    &_text {
+      padding-left: 1.5rem;
       font-size: 0.9rem;
       line-height: 2.2;
+      height: 250px;
+      overflow-y: auto;
+      @media only screen and (max-width: $lg) {
+        padding-top: 1rem;
+        padding-left: 0;
+      }
     }
   }
-  .article_header {
+  &_subtitle {
+    display: flex;
+    justify-content: space-between;
+    span {
+      cursor: pointer;
+      margin-left: 1rem;
+      padding-top: 0.2rem;
+      transition: 0.3s;
+    }
+  }
+  &_top {
     h2 {
       display: flex;
       margin-bottom: 0.8rem;
@@ -498,11 +529,11 @@ header {
       }
     }
     ul {
-      .article_list {
+      .content_list {
         display: inline-block;
         margin-right: 1rem;
       }
-      .article_tag {
+      .content_tag {
         user-select: none;
         margin-right: 0.5rem;
         &:hover {
@@ -513,7 +544,7 @@ header {
   }
 }
 
-.article_small_box {
+.content_small_box {
   padding: 1rem;
   transition: 0.4s all;
   width: 100%;
@@ -548,6 +579,8 @@ header {
   }
 }
 
+// ================= Airport route =======================
+
 .route_content {
   &_header {
     padding: 1rem;
@@ -565,6 +598,12 @@ header {
         display: flex;
         align-items: center;
       }
+    }
+    .ant-select-selection-item {
+      padding: 0 !important;
+    }
+    .ant-select-arrow {
+      display: none;
     }
     a {
       &:hover {
@@ -590,6 +629,55 @@ header {
     right: 1rem;
     &:hover {
       color: $BLUE_COLOR;
+    }
+  }
+}
+
+//================== Analyzer =============================
+
+.analyzer {
+  &_budget {
+    display: flex;
+    padding: 1rem;
+    font-weight: normal;
+    align-items: center;
+    h2 {
+      margin-right: 1rem;
+    }
+    button {
+      height: 50%;
+      font-size: 0.8rem;
+    }
+  }
+  &_input {
+    display: flex;
+    padding: 1rem;
+    .type_selector {
+      width: 30%;
+      margin-right: 1rem;
+    }
+    .payment {
+      width: 40%;
+      &_usd {
+        margin-left: 1rem;
+      }
+      &_krw {
+        margin-right: 1rem;
+      }
+    }
+  }
+  &_list {
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    transition: 0.3s all;
+    &:hover {
+      background-color: rgba(0, 0, 0, 0.1);
+    }
+    .delete_btn {
+      display: inline-block;
+      margin-left: 1rem;
     }
   }
 }
