Updated : update function for saving at localstore on the home&activity page

--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -467,6 +467,24 @@ p {
   position: relative;
 }
 
+.togo_preview {
+  background-color: #fff;
+  padding: 1rem;
+  border-radius: 5px;
+  position: relative;
+  -webkit-transform: translateY(-100%);
+          transform: translateY(-100%);
+  z-index: 1;
+  cursor: pointer;
+}
+
+.togo_preview span {
+  position: absolute;
+  font-size: 2rem;
+  bottom: -1rem;
+  left: -1rem;
+}
+
 .home_modal {
   background-color: #fff;
   border-radius: 5px;
