--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -563,16 +563,47 @@ header a {
   width: 320px;
   font-size: 1.1rem;
   background-color: #263238;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .nav .nav_menu_link {
-  color: #fff;
   padding: 1.5rem;
+  color: #fff;
   background-color: #263238;
 }
 
 .nav .nav_menu_link:hover {
   background-color: rgba(255, 255, 255, 0.2);
+}
+
+.nav .footer {
+  padding: 1rem;
+}
+
+.nav .footer_desc {
+  margin-bottom: 0.5rem;
+  color: #fff;
+  font-size: 0.9rem;
+}
+
+.nav .footer ul {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.nav .footer ul a {
+  color: #fff;
+  margin-right: 0.5rem;
 }
 
 @media only screen and (max-width: 768px) {
