--- a/client/src/styles/style.css
+++ b/client/src/styles/style.css
@@ -725,12 +725,11 @@ header a {
           justify-content: space-between;
 }
 
-.content_subtitle span {
+.content_subtitle .addBtn {
   cursor: pointer;
   margin-left: 1rem;
-  padding-top: 0.2rem;
-  -webkit-transition: 0.3s;
-  transition: 0.3s;
+  -webkit-transition: 0.3s all;
+  transition: 0.3s all;
 }
 
 .content_top h2 {
@@ -800,7 +799,8 @@ header a {
   border-radius: 10px;
 }
 
-.content_small_box .image_wrapper .place_img {
+.content_small_box .image_wrapper .place_img,
+.content_small_box .image_wrapper .airport_img {
   width: 100%;
   height: 240px;
   -webkit-transition: 0.4s all;
@@ -820,7 +820,8 @@ header a {
   background-color: rgba(0, 0, 0, 0.1);
 }
 
-.content_small_box:hover .place_img {
+.content_small_box:hover .place_img,
+.content_small_box:hover .airport_img {
   -webkit-transform: scale(1.05);
           transform: scale(1.05);
 }
